feat: Add play/pause interactivity
The user can now press space to pause and play the playback.

The default behavior of the space key has to be suppressed to do this.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
       playPauseButton.textContent = isPaused ? 'Play' : 'Pause';
     });
 
+    document.addEventListener('keydown', (event) => {
+      if (event.code === 'Space') {
+        event.preventDefault();
+        isPaused = !isPaused;
+        playPauseButton.textContent = isPaused ? 'Play' : 'Pause';
+      }
+    });
+
     highlightText();
   </script>
 </html>
