feat: Start the application in a paused state
Previously, the highlighting started automatically on page load. Now, it
starts paused.

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@ p {
   </head>
   <body>
     <div class="content">
-      <button id="playPauseButton">Pause</button>
+      <button id="playPauseButton">Play</button>
       <div class="time"><span id="time"></span></div>
     </div>
   </body>
   <script>
-    let isPaused = false;
+    let isPaused = true;
     let currentTimeout;
 
     let elementIndex = 0;
