fix: Clear the current highlight after click
Previously, the text highlighting would stick around after the user
clicked elsewhere. Now, the highlighting is cleared automatically.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ p {
         totalChars += line.length;
 
         p.addEventListener('click', () => {
+          elements.forEach(el => el.innerHTML = el.textContent);
           charIndex = 0;
           elementIndex = elements.indexOf(p);
           isPaused = false;
