--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@ body {
   margin: auto;
   background: white;
   padding: 20px;
+  padding-top: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
 }
 
 p {
   line-height: 1.6;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  margin-top: 0;
 }
 
 .highlight {
