feat: Allow user to move forward/backward using the arrow keys
Pressing the right arrow key moves the pace cursor to the next element,
and pressing the left arrow key moves the cursor to the previous
element.

--- a/index.html
+++ b/index.html
@@ -215,6 +215,22 @@ p {
         event.preventDefault();
         isPaused = !isPaused;
         playPauseButton.textContent = isPaused ? 'Play' : 'Pause';
+      } else if (event.code === 'ArrowRight') {
+        if (elementIndex < elements.length - 1) {
+          elements[elementIndex].innerHTML = elements[elementIndex].textContent;
+          elementIndex++;
+          charIndex = 0;
+          isPaused = false;
+          playPauseButton.textContent = 'Pause';
+        }
+      } else if (event.code === 'ArrowLeft') {
+        if (elementIndex > 0) {
+          elements[elementIndex].innerHTML = elements[elementIndex].textContent;
+          elementIndex--;
+          charIndex = 0;
+          isPaused = false;
+          playPauseButton.textContent = 'Pause';
+        }
       }
     });
 
