--- a/index.html
+++ b/index.html
@@ -231,6 +231,14 @@ p {
           isPaused = false;
           playPauseButton.textContent = 'Pause';
         }
+      } else if (event.code === 'KeyR') {
+        elements.forEach(el => el.innerHTML = el.textContent);
+        elementIndex = 0;
+        charIndex = 0;
+        isPaused = false;
+        playPauseButton.textContent = 'Pause';
+      } else {
+        console.log('Other key pressed:', event.code);
       }
     });
 
