--- a/index.html
+++ b/index.html
@@ -18,9 +18,63 @@ body {
   margin: auto;
   background: white;
   padding: 20px;
-  padding-top: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
+}
+
+.input-controls {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+#textInput {
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+.controls-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#loadButton,
+#playPauseButton {
+  background-color: #008CBA;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+#loadButton {
+  background-color: #4CAF50;
+}
+
+#speedControl {
+  display: flex;
+  align-items: center;
+}
+
+#speedLabel {
+  margin-right: 5px;
+  color: #555;
+  font-size: 14px;
+}
+
+#speed {
+  width: 60px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 p {
@@ -33,66 +87,38 @@ p {
   background-color: yellow;
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
 .time {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 0.8em;
+  text-align: right;
+  font-size: 0.9em;
   color: #777;
+  margin-top: 10px;
 }
 
-#playPauseButton {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  padding: 5px 10px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
 
-#textInput {
-  width: 100%;
-  height: 100px;
-  margin-bottom: 10px;
-  padding: 5px;
-  box-sizing: border-box;
-}
-
-#loadButton {
-  background-color: #008CBA;
-  color: white;
-  padding: 5px 10px;
-  border: none;
-  cursor: pointer;
-}
-
-#speedControl {
-  position: absolute;
-  top: 10px;
-  left: 100px;
-}
-
-#speedLabel {
-  margin-right: 5px;
-  color: #555;
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
     </style>
   </head>
   <body>
     <div class="content">
-      <textarea id="textInput" placeholder="Enter your text here..."></textarea>
-      <button id="loadButton">Load Text</button>
-      <button id="playPauseButton">Play</button>
-      <div id="speedControl">
-        <label id="speedLabel" for="speed">Speed:</label>
-        <input type="number" id="speed" value="20" min="1" max="100" step="1">
+      <div class="input-controls">
+        <textarea id="textInput" placeholder="Enter your text here..."></textarea>
+        <div class="controls-row">
+          <button id="loadButton">Load Text</button>
+          <button id="playPauseButton">Play</button>
+          <div id="speedControl">
+            <label id="speedLabel" for="speed">Speed:</label>
+            <input type="number" id="speed" value="20" min="1" max="100" step="1">
+          </div>
+        </div>
       </div>
       <div class="time"><span id="time"></span></div>
     </div>
@@ -115,9 +141,8 @@ p {
 
     async function processTextToElements(text) {
       const contentDiv = document.querySelector(".content");
-      while (contentDiv.firstChild && contentDiv.firstChild.id !== 'playPauseButton' && contentDiv.firstChild.id !== 'time' && contentDiv.firstChild.id !== 'speedControl' && contentDiv.firstChild.id !== 'textInput' && contentDiv.firstChild.id !== 'loadButton') {
-        contentDiv.removeChild(contentDiv.firstChild);
-      }
+      const paragraphs = contentDiv.querySelectorAll('p');
+      paragraphs.forEach(p => p.remove());
 
       elements = [];
       totalChars = 0;
@@ -140,7 +165,10 @@ p {
         });
       });
 
-      return { elements, totalChars };
+      return {
+        elements,
+        totalChars
+      };
     }
 
     function setTotalTime(totalChars, timePerChar) {
@@ -237,7 +265,7 @@ p {
     playPauseButton.addEventListener('click', () => {
       isPaused = !isPaused;
       playPauseButton.textContent = isPaused ? 'Play' : 'Pause';
-      if(!isPaused) {
+      if (!isPaused) {
         highlightText();
       }
     });
@@ -247,7 +275,7 @@ p {
         event.preventDefault();
         isPaused = !isPaused;
         playPauseButton.textContent = isPaused ? 'Play' : 'Pause';
-        if(!isPaused) {
+        if (!isPaused) {
           highlightText();
         }
       } else if (event.code === 'ArrowRight' || event.code === 'KeyN') {
