fix: Don't use event listener on text area
The text area requires full access to the arrow keys, so we disable the
event listener when this element is focused.

--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@ p {
     });
 
     document.addEventListener('keydown', (event) => {
+      if (document.activeElement === textInput) {
+        return;
+      }
+
       if (event.code === 'Space') {
         event.preventDefault();
         isPaused = !isPaused;
